Add subdomain support for gpt.medviberpro.com

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,8 @@ OPENAI_API_KEY=your-actual-openai-api-key-here
 # Server Configuration
 BACKEND_PORT=8000
 
-# CORS Settings (comma-separated)
-ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# CORS Settings (comma-separated) - Include your domain and subdomain
+ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com,https://gpt.yourdomain.com
 
 # Optional: Logging level
 LOG_LEVEL=INFO
