--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name yourdomain.com www.yourdomain.com gpt.yourdomain.com;
 
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -12,7 +12,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name yourdomain.com www.yourdomain.com gpt.yourdomain.com;
 
     # SSL configuration (managed by Certbot)
     # ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
