Update nginx.conf to serve only gpt.medviberpro.com subdomain

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name medviberpro.com www.medviberpro.com gpt.medviberpro.com;
+    server_name gpt.medviberpro.com;
 
     # Frontend - static files
     root /var/www/medical-search/frontend/my-app/dist;
@@ -60,7 +60,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://medviberpro.com;" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://gpt.medviberpro.com;" always;
 
     # Gzip compression
     gzip on;
@@ -72,11 +72,11 @@ server {
 # SSL server block (uncomment after running certbot)
 # server {
 #     listen 443 ssl http2;
-#     server_name medviberpro.com www.medviberpro.com gpt.medviberpro.com;
+#     server_name gpt.medviberpro.com;
 
 #     # SSL configuration (managed by Certbot)
-#     ssl_certificate /etc/letsencrypt/live/medviberpro.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/medviberpro.com/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/gpt.medviberpro.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/gpt.medviberpro.com/privkey.pem;
 
 #     # Frontend - static files
 #     root /var/www/medical-search/frontend/my-app/dist;
